# avatars

./: .gitignore  CNAME  DejaVu-sdf.json  FBXLoader.js  GLTFLoader.js  OrbitControls.js  README.md  Reflector.js  avatars.js  bmfont.js  index.html  index.js  multiplayer.js  package-lock.json  package.json  three.js  three.module.js  untar.js
proto/: Armature.js  IKComponents.js  README.md  RiggedModel.js  experiments.js  model.patches.js  remapJointNames.js  utils.js
proto/misc/: IKRiggedModel.js  browser.js  ephemeral-three-ik.js  ephemeral-three.js  tim.OrbitControls.js
proto/misc/worker/: worker.js  worker.main.js
proto/three-ik/: AutoIKChain.js  QuaternionIK.js  modified.AxisUtils.js
rust/: Cargo.toml
rust-wasm-exokit-avatars/: Cargo.toml  README.md
rust-wasm-exokit-avatars/src/: ArmTransforms  ArmTransforms.rs  Three  Three.rs  lib.rs
rust-wasm-exokit-avatars/src/three/: Object3D  Vector3  Vector3.js  Vector3.rs
rust-wasm-exokit-avatars/src/three/core/: Object3D.js  Object3D.rs
rust-wasm-exokit-avatars/src/three/math/: Matrix4  Matrix4.js  Matrix4.rs  Quaternion  Quaternion.rs  Vector3.rs
rust-wasm-exokit-avatars/src/three/scenes/: Scene  Scene.js  Scene.rs
rust/src/: main  main.rs
vrarmik/: ArmTransforms.js  AvatarVRTrackingReferences.js  LegsManager.js  PoseManager.js  Rig.js  ShoulderPoser.js  ShoulderTransforms.js  SkeletonUtils.js  StaticOffsetTransform.js  Unity.js  VRArmIK.js  VRTrackingReferences.js  avatars.js  microphone-worker.js  three-vrm.js
vrarmik/Utils/: VectorHelpers.js
